--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 
-    <img src="Foto/sapo.png" usemap="#image-map">
+    <img src="sapo.png" usemap="#image-map">
 
 <map name="image-map">
     <area target="" alt="" title="" href="https://youtu.be/xuCn8ux2gbs?si=EoaEcAYLFB2tpsNW" coords="10,148,879,768" shape="rect">
